@@ -40,6 +40,7 @@
 - Fix on Bug Varchar and char type fields have quotation marks in default value when editing definition in VS designer (Oracle bug #13442506).
 - Fix for bug on Create Table via Server Explorer. The columns properties are now added in the correct order.(Oracle db Bug # 13475830).
 - Fix for error when creating a table in table designer (Oracle bug #13477805).
+- Fix for Cannot create a foreign key that references the same table (Oracle bug #13481340).
 
 Version 6.3.7
 - IPv6 connections are now supported 
